[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-expresso"
version = "2.0.0"
description = "Mr Expresso - CLI to control the ExpressVPN app"
readme = "Readme.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Md Faisal Qureshi" },
]
keywords = ["CLI", "VPN", "ExpressVPN", "mr-expresso"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://github.com/mfq2412/mr-expresso"

[project.scripts]
mr-expresso = "expresso:main"
expresso = "expresso:main"

[tool.setuptools]
py-modules = ["expresso"]
